fable/test/valid/string_common_dims.f
      program prog
      character strings*10
      common /com/ strings(2)
      end
