fable/test/syntax_error/dimension_with_data_size.f
      program prog
      character strings
      dimension strings*4(2)
      end
